--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,64 @@
-/* Write your CSS here! */
+body {
+    margin: 8px;
+    display: block;
+}
+
+#mainHeading {
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration-line: overline underline;
+    text-decoration-style: double;
+    text-decoration-thickness: 6px;
+    font-family: fantasy;
+    color: red;
+    padding: 1rem;
+    display: block;
+}
+
+h1, h2 {
+    display: block;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
+.funParagraph {
+    margin-left: auto;
+    margin-right: auto; 
+    display: block;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: green;
+
+}
+
+p {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+figcaption {
+    margin-left: auto;
+    margin-right: auto; 
+    text-align: center;
+    padding-top: 20px;
+}
+
+footer {
+    margin-left: auto;
+    margin-right: auto; 
+    text-align: center;
+}
+
+.eifelTower {
+    margin-left: auto;
+    margin-right: auto;
+}
