--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,8 @@ body {
 #mainHeading {
     text-align: center;
     text-transform: uppercase;
-    text-decoration-line: overline underline;
-    text-decoration-style: double;
-    text-decoration-thickness: 6px;
+    text-decoration-line: underline;
+    text-decoration-thickness: 3;
     font-family: fantasy;
     color: red;
     padding: 1rem;
@@ -25,7 +24,10 @@ h1, h2 {
 img {
     display: block;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+    width: auto;
 }
 
 .funParagraph {
