--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,21 @@
 body {
     margin: 8px;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blanchedalmond;
 }
 
 #mainHeading {
     text-align: center;
     text-transform: uppercase;
     text-decoration-line: underline;
-    text-decoration-thickness: 3;
-    font-family: fantasy;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: red;
     padding: 1rem;
-    display: block;
 }
 
-h1, h2 {
-    display: block;
+h2 {
     text-align: center;
     font-family:'Courier New', Courier, monospace;
     text-decoration-line: underline;
@@ -23,17 +23,11 @@ h1, h2 {
 
 img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     max-width: 100%;
-    height: auto;
-    width: auto;
+    margin: auto;
 }
 
 .funParagraph {
-    margin-left: auto;
-    margin-right: auto; 
-    display: block;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: green;
@@ -41,27 +35,19 @@ img {
 }
 
 p {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    padding-left: 4em;
+    padding-right: 4em;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
-figcaption {
-    margin-left: auto;
-    margin-right: auto; 
+figcaption { 
     text-align: center;
     padding-top: 20px;
 }
 
 footer {
-    margin-left: auto;
-    margin-right: auto; 
     text-align: center;
-}
-
-.eifelTower {
-    margin-left: auto;
-    margin-right: auto;
 }
