--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ img {
     margin: auto;
 }
 
-.funParagraph {
+#testP, .funParagraph {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: green;
